@@ -1,7 +1,18 @@
 package com.kagof.intellij.plugins.pokeprogress;
 
-import java.awt.Graphics2D;
-import java.awt.Paint;
+import com.intellij.openapi.util.text.Strings;
+import com.kagof.intellij.plugins.pokeprogress.model.Generation;
+import com.kagof.intellij.plugins.pokeprogress.model.Pokemon;
+import com.kagof.intellij.plugins.pokeprogress.theme.ColorScheme;
+import com.kagof.intellij.plugins.pokeprogress.theme.ColorSchemes;
+import com.kagof.intellij.plugins.pokeprogress.theme.PaintTheme;
+import com.kagof.intellij.plugins.pokeprogress.theme.PaintThemes;
+import com.sksamuel.scrimage.ImmutableImage;
+import com.sksamuel.scrimage.nio.AnimatedGif;
+import com.sksamuel.scrimage.nio.AnimatedGifReader;
+import com.sksamuel.scrimage.nio.ImageSource;
+import com.sksamuel.scrimage.nio.StreamingGifWriter;
+import java.awt.*;
 import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
@@ -18,56 +29,55 @@ import java.util.function.Function;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import org.jetbrains.annotations.NotNull;
+import org.junit.Assume;
+import org.junit.Test;
 
-import com.intellij.openapi.util.text.Strings;
-import com.kagof.intellij.plugins.pokeprogress.model.Generation;
-import com.kagof.intellij.plugins.pokeprogress.model.Pokemon;
-import com.kagof.intellij.plugins.pokeprogress.theme.ColorScheme;
-import com.kagof.intellij.plugins.pokeprogress.theme.ColorSchemes;
-import com.kagof.intellij.plugins.pokeprogress.theme.PaintTheme;
-import com.kagof.intellij.plugins.pokeprogress.theme.PaintThemes;
-import com.sksamuel.scrimage.ImmutableImage;
-import com.sksamuel.scrimage.nio.AnimatedGif;
-import com.sksamuel.scrimage.nio.AnimatedGifReader;
-import com.sksamuel.scrimage.nio.ImageSource;
-import com.sksamuel.scrimage.nio.StreamingGifWriter;
-
+/**
+ * Updates the readme, family picture, and release notes to include new versions and new Pokémon.
+ * <p>
+ * Use the "Generate Documentation" IntelliJ run configuration.
+ */
+// deliberately not following naming convention so doesn't run automatically
+@SuppressWarnings("NewClassNamingConvention")
 public class DocumentationGenerator {
     private static final ColorScheme FAMILY_COLOR_SCHEME = ColorSchemes.getByIdOrDefault("1_Official");
     private static final PaintTheme FAMILY_PAINT_THEME = PaintThemes.getByIdOrDefault("flat");
 
-    public static void main(final String[] args) throws Exception {
-        final DocumentationGenerator documentationGenerator = new DocumentationGenerator();
-        documentationGenerator.updateFamilyPicture();
-        documentationGenerator.updateReadme();
-        documentationGenerator.addNewReleaseNoteSection();
+    @Test
+    public void runDocumentationGenerator() throws Exception {
+        Assume.assumeTrue("KGIJ_DG_ENABLED environment variable not set",
+            System.getenv().containsKey("KGIJ_DG_ENABLED"));
+        updateFamilyPicture();
+        updateReadme();
+        addNewReleaseNoteSection();
     }
 
     /**
      * Updates the sprites in the README.md file.
      */
-    public void updateReadme() throws IOException {
+    public static void updateReadme() throws IOException {
         final Path readme = new File("README.md").toPath();
         final String content = Files.readString(readme, Charset.defaultCharset());
         final int start = content.lastIndexOf("## Included Pokémon");
         final int end = content.lastIndexOf("[comment]: <> (end-included-pokemon)") + 36;
         final String substring = content.substring(start, end);
         final String newContent = content.replace(substring, getReadmeString());
-        Files.write(readme, newContent.getBytes(Charset.defaultCharset()));
+        Files.writeString(readme, newContent, Charset.defaultCharset());
         System.out.println("replaced content of README.md");
     }
 
     /**
      * Updates the sprites in the family picture.
      */
-    public void updateFamilyPicture() throws Exception {
+    public static void updateFamilyPicture() throws Exception {
         final int lcm = getLcmNumFrames();
         final List<BufferedImage> images = new ArrayList<>();
         for (int frame = 0; frame < lcm; frame++) {
             images.add(drawFrame(frame));
         }
 
-        final StreamingGifWriter writer = new StreamingGifWriter(Duration.ofMillis(500), true);
+        final StreamingGifWriter writer = new StreamingGifWriter(Duration.ofMillis(500), true, false);
         try (final StreamingGifWriter.GifStream gif = writer.prepareStream("eg/family.gif",
             BufferedImage.TYPE_INT_ARGB)) {
             for (final BufferedImage image : images) {
@@ -77,11 +87,11 @@ public class DocumentationGenerator {
         System.out.println("updated family photo");
     }
 
-    public void addNewReleaseNoteSection() throws IOException {
+    public static void addNewReleaseNoteSection() throws IOException {
         final Path gradleFile = new File("gradle.properties").toPath();
         final String gradleContents = Files.readString(gradleFile, Charset.defaultCharset());
         final String version = gradleContents.lines()
-            .filter(l -> l.startsWith("version"))
+            .filter(l -> l.startsWith("pluginVersion"))
             .map(l -> {
                 final Matcher m = Pattern.compile("=.*").matcher(l);
                 if (m.find()) {
@@ -93,7 +103,7 @@ public class DocumentationGenerator {
             .filter(Strings::isNotEmpty)
             .findFirst()
             .map(s -> s.replaceAll("\"", "").replaceAll("=", ""))
-            .orElseThrow(() -> new IllegalStateException("Gradle version not found"));
+            .orElseThrow(() -> new IllegalStateException("pluginVersion not found in gradle.properties"));
         System.out.println("using version " + version);
 
         final Path changenotes = new File("changenotes.html").toPath();
@@ -103,6 +113,12 @@ public class DocumentationGenerator {
             return;
         }
 
+        final String newContent = getNewContent(version, content);
+        Files.writeString(changenotes, newContent, Charset.defaultCharset());
+        System.out.println("added " + version + " section to changenotes.html");
+    }
+
+    private static @NotNull String getNewContent(final String version, final String content) {
         final String newNotes = "    <li>\n"
             + "        <b>\n"
             + "            <a href=\"https://github.com/kagof/intellij-pokemon-progress/releases/tag/"
@@ -124,14 +140,13 @@ public class DocumentationGenerator {
             + "-->\n"
             + "    </li>\n";
 
-        final String newContent = content
+        return content
             .replace("<details open>", "<details>")
-            .replaceFirst("<ul>\n", "<ul>\n" + newNotes);
-        Files.write(changenotes, newContent.getBytes(Charset.defaultCharset()));
-        System.out.println("added " + version + " section to changenotes.html");
+            .replaceFirst("<ul>\n", "<ul>\n" + newNotes)
+            .replaceFirst("<ul>\r\n", "<ul>\r\n" + newNotes);
     }
 
-    private String getReadmeString() {
+    private static String getReadmeString() {
         final Map<Generation, Boolean> gens = Arrays.stream(Generation.values())
             .collect(Collectors.toMap(Function.identity(), __ -> false));
         final StringBuilder stringBuilder = new StringBuilder();
@@ -151,7 +166,7 @@ public class DocumentationGenerator {
         return stringBuilder.toString().trim();
     }
 
-    private String getReadmeString(final Pokemon pokemon) {
+    private static String getReadmeString(final Pokemon pokemon) {
         return String.format(
             "* ![%s](src/main/resources/%s) %s ![%s](src/main/resources/%s)",
             pokemon.getNameWithNumber(),
@@ -161,8 +176,7 @@ public class DocumentationGenerator {
             PokemonResourceLoader.getReversedIconPath(pokemon));
     }
 
-    @SuppressWarnings("UndesirableClassUsage")
-    private BufferedImage drawFrame(final int frame) throws IOException {
+    private static BufferedImage drawFrame(final int frame) throws IOException {
         int i = 0;
         int j = 0;
         final int numPokemon = Pokemon.DEFAULT_POKEMON.size();
@@ -181,20 +195,20 @@ public class DocumentationGenerator {
         return img;
     }
 
-    private void drawPokemon(final int frame, final int i, final int j, final Graphics2D g, final Pokemon pokemon)
+    private static void drawPokemon(final int frame, final int i, final int j, final Graphics2D g, final Pokemon pokemon)
         throws IOException {
         final int startX = i * 32;
         final int startY = j * 32;
         final Paint typePaint = FAMILY_PAINT_THEME.getPaint(pokemon.getTypes(), FAMILY_COLOR_SCHEME, startY, 32);
         g.setPaint(typePaint);
         g.fillRect(startX, startY, 32, 32);
-        final AnimatedGif gif = AnimatedGifReader.read(ImageSource.of(getClass().getClassLoader()
+        final AnimatedGif gif = AnimatedGifReader.read(ImageSource.of(DocumentationGenerator.class.getClassLoader()
             .getResource(PokemonResourceLoader.getIconPath(pokemon))
             .openStream()));
         g.drawImage(gif.getFrame(frame % gif.getFrameCount()).awt(), startX, startY, 32, 32, null);
     }
 
-    private int getLcmNumFrames() {
+    private static int getLcmNumFrames() {
         // If we ever get sprites with more frames, we should actually implement this method properly
         return 2;
     }
